internal/fixtures/architecture/negative/browser-server/apps/web/src/bad.ts
import fs from "node:fs";

export const forbidden = fs.readFileSync;
